--- a/puppet_2.docset/Contents/Info.plist
+++ b/puppet_2.docset/Contents/Info.plist
@@ -5,7 +5,7 @@
 	<key>CFBundleIdentifier</key>
 	<string>puppet</string>
 	<key>CFBundleName</key>
-	<string>Puppet</string>
+	<string>Puppet 2.7.21</string>
 	<key>DocSetPlatformFamily</key>
 	<string>Puppet</string>
 	<key>DashDocSetFamily</key>
